# src/config/openapi.yml
@@ -93,8 +93,92 @@ tags:
     description: jolokia API
   - name: development
     description: for development purposes
+  - name: admin
+    description: for management operations
+
+security:
+  - bearerAuth: []
 
 paths:
+  /server/login:
+    post:
+      summary: Api to log in to the api server.
+      description: >
+        This api is used to login to the api server.
+      tags:
+        - security
+      operationId: serverLogin
+      security: [] # no security for login
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userName:
+                  type: string
+                password:
+                  type: string
+              required:
+                - userName
+                - password
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerLoginResponse'
+        401:
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
+  /server/logout:
+    post:
+      summary: Api to log out
+      description: >
+        This api is used to logout the current session.
+      tags:
+        - security
+      operationId: serverLogout
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmptyBody'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerLogoutResponse'
+        401:
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
   /jolokia/login:
     post:
       summary: The login api
@@ -112,6 +196,7 @@ paths:
         named `jolokia-session-id`.
         The src will validate the token before processing a request is
         and rejects the request if the token is not valid.
+      security: [] # no security for login
       tags:
         - security
       operationId: login
@@ -168,6 +253,39 @@ paths:
               schema:
                 type: object
                 $ref: '#/components/schemas/FailureResponse'
+  /server/admin/listEndpoints:
+    get:
+      summary: List endpoints managed by the api-server
+      description: >
+        ** List broker jolokia endpoints **
+          The return value is a list of endpoints currently
+          managed by the api server.
+      tags:
+        - admin
+      operationId: listEndpoints
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Endpoint'
+        401:
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/FailureResponse'
   /brokers:
     get:
       summary: retrieve the broker mbean
@@ -183,7 +301,17 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: header
+          name: endpoint-name
+          schema:
+            type: string
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -223,7 +351,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -263,7 +396,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: names
           description: attribute names separated by commas. If not speified read all attributes.
           required: false
@@ -274,6 +407,11 @@ paths:
               type: string
           style: form
           explode: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -315,7 +453,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           description: the address name
           schema:
@@ -332,6 +470,11 @@ paths:
               type: string
           style: form
           explode: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -373,7 +516,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           description: the queue name
           schema:
@@ -402,6 +545,11 @@ paths:
               type: string
           style: form
           explode: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -443,7 +591,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           description: the queue name
           schema:
@@ -460,6 +608,11 @@ paths:
               type: string
           style: form
           explode: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -501,7 +654,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           description: the cluster connection name
           schema:
@@ -518,6 +671,11 @@ paths:
               type: string
           style: form
           explode: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -559,12 +717,17 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - in: query
           name: name
           schema:
             type: string
           required: true
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       requestBody:
         required: true
         content:
@@ -594,7 +757,6 @@ paths:
               schema:
                 type: object
                 $ref: '#/components/schemas/FailureResponse'
-
   /checkCredentials:
     get:
       summary: Check the validity of the credentials
@@ -606,7 +768,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
       responses:
         200:
           description: Success
@@ -647,7 +809,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       requestBody:
         required: true
         content:
@@ -693,7 +860,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -732,7 +904,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -771,13 +948,18 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: address
           required: false
           in: query
           schema:
             type: string
             description: If given only list the queues on this address
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -818,7 +1000,7 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: addressName
           required: false
           in: query
@@ -837,6 +1019,11 @@ paths:
           schema:
             type: string
             description: the routing type of the queue (anycast or multicast)
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -875,13 +1062,18 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           required: true
           in: query
           schema:
             type: string
             description: the address name
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -918,7 +1110,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -959,13 +1156,18 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           required: true
           in: query
           schema:
             type: string
             description: the acceptor name
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -1002,7 +1204,12 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -1043,13 +1250,18 @@ paths:
           name: jolokia-session-id
           schema:
             type: string
-          required: true
+          required: false
         - name: name
           required: true
           in: query
           schema:
             type: string
             description: the cluster connection name
+        - in: query
+          name: targetEndpoint
+          schema:
+            type: string
+          required: false
       responses:
         200:
           description: Success
@@ -1082,6 +1294,7 @@ paths:
       tags:
         - development
       operationId: apiInfo
+      security: [] #no security for api-info
       responses:
         200:
           description: Success
@@ -1171,6 +1384,11 @@ components:
         message:
           type: object
           properties:
+            security:
+              type: object
+              properties:
+                enabled:
+                  type: boolean
             info:
               type: object
               properties:
@@ -1195,6 +1413,30 @@ components:
           type: string
           enum: [successful]
         jolokia-session-id:
+          type: string
+          description: The jwt token
+    ServerLogoutResponse:
+      type: object
+      required:
+        - status
+        - message
+      properties:
+        message:
+          type: string
+        status:
+          type: string
+    ServerLoginResponse:
+      type: object
+      required:
+        - status
+        - message
+        - bearerToken
+      properties:
+        message:
+          type: string
+        status:
+          type: string
+        bearerToken:
           type: string
           description: The jwt token
     LoginResponse:
@@ -1262,6 +1504,15 @@ components:
         - name
       properties:
         name:
+          type: string
+    Endpoint:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+        url:
           type: string
     FailureResponse:
       type: object
@@ -1416,3 +1667,11 @@ components:
           type: number
         status:
           type: number
+    EmptyBody:
+      type: object
+      nullable: true
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
